--- a/styles/modules/blocks/header/header.css
+++ b/styles/modules/blocks/header/header.css
@@ -9,6 +9,8 @@
   width: 100%;
   background-color: #DF2626;
   min-height: 84px;
+  position: sticky;
+  top: 0;
 }
 .header__list {
   list-style: none;
@@ -21,6 +23,13 @@
   justify-content: center;
   align-items: center;
   align-content: center;
+}
+@media (max-width: 1440px) {
+  .header__list {
+    display: none;
+    margin: 0 auto 0 40px;
+    padding: 0;
+  }
 }
 .header__links {
   list-style: none;
@@ -43,6 +52,15 @@
 }
 .header__link:last-of-type {
   margin-right: 50px;
+}
+.header__logoButtonLink {
+  list-style: none;
+  list-style-type: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
 }
 .header__logoButton {
   margin: 0 0 0 50px;
@@ -72,9 +90,28 @@
 }
 .header__buttonBurgerMenu {
   display: none;
+  width: 32px;
+  height: 20px;
+  margin: 0 40px 0 0;
+  padding: 0;
+}
+.header__buttonBurgerMenu:hover {
+  cursor: pointer;
+  opacity: 70%;
 }
 @media (max-width: 1440px) {
   .header__buttonBurgerMenu {
     display: block;
   }
+}
+.header__closeIcon {
+  margin: 0 34.41px 0 0;
+  padding: 0;
+  display: none;
+  width: 32px;
+  height: 32px;
+}
+.header__closeIcon:hover {
+  cursor: pointer;
+  opacity: 70%;
 }/*# sourceMappingURL=header.css.map */
