--- a/styles/modules/blocks/camera/camera.scss
+++ b/styles/modules/blocks/camera/camera.scss
@@ -47,6 +47,7 @@
     @include screen1440px {
       @include tabletBlockName;
       margin-bottom: 180px;
+      margin-top: 0;
     }
   }
   &__foto {
