--- a/styles/modules/blocks/camera/camera.scss
+++ b/styles/modules/blocks/camera/camera.scss
@@ -13,19 +13,12 @@
     "feedback1 feedback2"
     "name1 name2"
     "mail1 mail2";
-  @include screen1440px {
-    @include tableSectionFlex;
-  }
-
   &__blockName {
     @include MarginPadding($margin: 50px 0 50px 54px);
     @include fontRegular(18px, 28px);
     grid-area: blockName;
     color: $whiteColor;
     text-transform: uppercase;
-    @include screen1440px {
-      @include tabletBlockName;
-    }
   }
   &__title {
     @include MarginPadding($margin: 0 81px 359px 50px);
@@ -33,9 +26,6 @@
     max-width: 617px;
     grid-area: title;
     color: $whiteColor;
-    @include screen1440px {
-      @include tabletTitle;
-    }
   }
   &__text {
     @include MarginPadding($margin: 0 0 180px 54px);
@@ -44,17 +34,10 @@
     grid-area: link;
     max-width: 400px;
     text-transform: uppercase;
-    @include screen1440px {
-      @include tabletBlockName;
-      margin-bottom: 180px;
-    }
   }
   &__foto {
     @include MarginPadding($margin: 50px 50px 50px 0);
     grid-area: foto;
-    @include screen1440px {
-      @include tabletFoto;
-    }
   }
   &__feedbackText {
     @include MarginPadding($margin: 0 0 60px 50px);
@@ -64,21 +47,11 @@
       @include MarginPadding($margin: 0 172px 60px 50px);
       max-width: 526px;
       grid-area: feedback1;
-      @include screen1440px {
-        @include tableText;
-        max-width: 526px;
-        margin-left: 40px;
-      }
     }
     &_2 {
       @include MarginPadding($margin: 0 auto 60px 0);
       max-width: 497px;
       grid-area: feedback2;
-      @include screen1440px {
-        @include tableText;
-        max-width: 526px;
-        margin-left: 40px;
-      }
     }
   }
   &__feedbackName {
@@ -87,18 +60,10 @@
     color: $whiteColor;
     &_1 {
       grid-area: name1;
-      @include screen1440px {
-        @include tableText;
-        margin-bottom: 10px;
-      }
     }
     &_2 {
       margin-left: 0;
       grid-area: name2;
-      @include screen1440px {
-        @include tableText;
-        margin-bottom: 10px;
-      }
     }
   }
   &__feedbackMail {
@@ -107,22 +72,118 @@
     color: $whiteColor;
     &_1 {
       grid-area: mail1;
-      @include screen1440px {
-        @include tableText;
-        max-width: none;
-        width: calc(100% - 80px);
-        padding-bottom: 60px;
-        border-bottom: 1px solid #ffffff;
-      }
     }
     &_2 {
       grid-area: mail2;
       margin-left: 0;
-      @include screen1440px {
+    }
+  }
+}
+
+@media (max-width: 1440px) {
+  .camera {
+    @include tableSectionFlex;
+    &__blockName {
+      @include tabletBlockName;
+    }
+    &__title {
+      @include tabletTitle;
+    }
+    &__text {
+      @include tableText;
+    }
+    &__feedbackText {
+      &_1 {
         @include tableText;
-        padding-bottom: 40px;
-        margin-bottom: 0;
+        max-width: 526px;
+        margin-left: 40px;
       }
+      &_2{
+        @include tableText;
+        max-width: 526px;
+        margin-left: 40px;
+      }
+    }
+    &__feedbackName {
+      @include tableText;
+      &_1 {
+          @include tableText;
+          margin-bottom: 10px;
+        }
+      &_2 {
+          @include tableText;
+          margin-bottom: 10px;
+        }
+    }
+    &__feedbackMail {
+      @include tableText;
+      &_1 {
+          @include tableText;
+          max-width: none;
+          width: calc(100% - 80px);
+          padding-bottom: 60px;
+          border-bottom: 1px solid #ffffff;
+        }
+      &_2 {
+          @include tableText;
+          padding-bottom: 40px;
+          margin-bottom: 0;
+      }
+    }
+    &__button {
+      @include tabletButton;
+    }
+    &__foto {
+      @include tabletFoto;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .camera {
+    max-width: 100%;
+    &__blockName {
+      @include phoneBlockName;
+      margin-top: 40px;
+      border-top: #ffffff 1px solid;
+    }
+    &__title {
+      @include phoneTitile;
+      max-width: 243px;
+      font-size: 48px;
+      line-height: 56.25px;
+    }
+    &__text {
+      @include phoneText;
+      margin-bottom: 60px;
+    }
+    &__feedbackText {
+      @include MarginPadding($margin: 0 0 30px 0);
+      @include phoneText;
+      font-size: 24px;
+      line-height: 26px;
+    }
+    &__feedbackName {
+      @include phoneText;
+      @include MarginPadding($margin: 0 0 6px 0);
+      line-height: 20px;
+    }
+    &__feedbackMail {
+      @include phoneText;
+      @include MarginPadding($margin: 0 0 30px 0, $padding: 0 0 30px 0);
+      font-size: 14px;
+      line-height: 12px;
+      border-bottom: #ffffff 1px solid;
+      &:last-of-type {
+        @include MarginPadding($margin: 0 0 20px 0, $padding: 0);
+        border-bottom: none;
+      }
+    }
+    &__button {
+      @include phoneButton;
+    }
+    &__foto {
+      @include phoneFoto;
     }
   }
 }
