--- a/styles/modules/blocks/fotoCourse/fotoCourse.css
+++ b/styles/modules/blocks/fotoCourse/fotoCourse.css
@@ -6,16 +6,6 @@
   display: grid;
   grid-template-areas: "title foto" "text foto" "button foto";
 }
-@media (max-width: 1440px) {
-  .fotoCourse {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    align-content: center;
-    width: 100%;
-  }
-}
 .fotoCourse__title {
   margin: 50px 0 60px 48px;
   padding: 0;
@@ -25,12 +15,6 @@
   line-height: 110px;
   grid-area: title;
   color: #000000;
-}
-@media (max-width: 1440px) {
-  .fotoCourse__title {
-    max-width: 617px;
-    margin: 40px auto 60px 40px;
-  }
 }
 .fotoCourse__text {
   margin: 0 0 170px 54px;
@@ -42,12 +26,6 @@
   line-height: 118%;
   grid-area: text;
   max-width: 469px;
-}
-@media (max-width: 1440px) {
-  .fotoCourse__text {
-    max-width: 469px;
-    margin: 0 auto 60px 44px;
-  }
 }
 .fotoCourse__button {
   margin: 0 0 50px 50px;
@@ -80,20 +58,57 @@
   font-size: 18px;
   line-height: 28px;
 }
-@media (max-width: 1440px) {
-  .fotoCourse__button {
-    max-width: 100%;
-    margin: 0 auto 40px 40px;
-  }
-}
 .fotoCourse__foto {
   margin: 50px 50px 50px 0;
   padding: 0;
   grid-area: foto;
 }
+
 @media (max-width: 1440px) {
+  .fotoCourse {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+  }
+  .fotoCourse__title {
+    max-width: 617px;
+    margin: 40px auto 60px 40px;
+  }
+  .fotoCourse__text {
+    max-width: 469px;
+    margin: 0 auto 60px 44px;
+  }
+  .fotoCourse__button {
+    max-width: 100%;
+    margin: 0 auto 40px 40px;
+  }
   .fotoCourse__foto {
     width: calc(100% - 80px);
     margin: 0 40px 60px 40px;
+  }
+}
+@media (max-width: 700px) {
+  .fotoCourse__title {
+    max-width: 282px;
+    margin: 14px auto 60px 20px;
+    font-size: 47px;
+    line-height: 56px;
+  }
+  .fotoCourse__text {
+    max-width: 276px;
+    margin: 0 auto 30px 20px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .fotoCourse__button {
+    max-width: 100%;
+    margin: 0 auto 20px 20px;
+  }
+  .fotoCourse__foto {
+    width: calc(100% - 40px);
+    margin: 0 20px 60px 20px;
   }
 }/*# sourceMappingURL=fotoCourse.css.map */
