--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,11 +2,11 @@
 @import "../styles/modules/blocks/effects/effects_visible.css";
 @import "../styles/modules/blocks/effects/effects_notVisible.css";
 @import "../styles/modules/variables/variables.scss";
-@import "../styles/modules/mixins/mixins.scss";
+@import "./modules/mixins/mixins.scss";
 @import "../styles/modules/blocks/page/page.scss";
 @import "../styles/modules/blocks/header/header.scss";
 @import "../styles/modules/blocks/fotoCourse/fotoCourse.scss";
-@import "../styles/modules/blocks/studyComposition/studyComposition.scss";
+@import "../styles/modules/blocks/study-composition/study-composition.scss";
 @import "../styles/modules/blocks/camera/camera.scss";
-@import "../styles/modules/blocks/searchingOrders/searchingOrders.scss";
-@import "../styles/modules/blocks/singUp/singUp.scss";
+@import "../styles/modules/blocks/searching-orders/searching-orders.scss";
+@import "../styles/modules/blocks/sing-up/sing-up.scss";
