--- a/styles/modules/blocks/sing-up/sing-up.scss
+++ b/styles/modules/blocks/sing-up/sing-up.scss
@@ -5,25 +5,28 @@
   @include MarginPadding;
   width: 100%;
   background-color: $redColor;
-  &__call-to-action {
-    @include MarginPadding;
-    @include flex(
-      $direction: row,
-      $justify: flex-start,
-      $alignItems: flex-start
-    );
-    width: 100%;
-  }
-  &__arrow {
-    @include MarginPadding($margin: 60px 50px 0 50px);
-    width: 129px;
-    height: 95px;
-  }
+  @include flex(
+    $direction: column,
+    $justify: flex-start,
+    $alignItems: flex-start
+  );
+
   &__title {
-    @include MarginPadding($margin: 50px 0 120px 0);
+    @include MarginPadding($margin: 50px 0 120px 229px);
     @include fontRegular(120px, 120px);
     max-width: 685px;
     color: $whiteColor;
+    position: relative;
+    &::before { 
+      content: "";
+      width: 129px;
+      height: 95px; 
+      background: url("../../../../images/arrow-footer.svg") no-repeat center center; 
+      display: block;
+    }
+
+      // @include MarginPadding($margin: 60px 50px 0 50px);
+      // width: 129px;
   }
   &__inputs {
     @include MarginPadding;
@@ -60,20 +63,25 @@
     }
   }
   &__since {
-    @include MarginPadding($margin: 0 auto 50px 50px);
+    @include MarginPadding($margin: 0 auto 0 50px, $padding: 0 0 50px 0);
     @include fontRegular(15px, 24px);
     color: $whiteColor;
   }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1439px) {
   .sing-up {
     @include tableSectionFlex;
     &__title {
       @include tabletTitle;
+      margin-bottom: 190px;
+
       font-size: 100px;
       line-height: 100px;
       max-width: 571px;
+      &::before {
+        display: none;
+      }
     }
     &__since {
       margin: 0 0 40px 40px;
@@ -82,9 +90,6 @@
     &__button {
       @include tabletButton;
       margin-left: 0;
-    }
-    &__arrow {
-      display: none;
     }
     &__input {
       margin: 0 0 80px 40px;
@@ -99,10 +104,12 @@
     &__title {
       border-top: white solid 1px;
       @include fontRegular($fontSize: 48px, $lineHeigth: 50px);
-      @include MarginPadding($margin: 0 20px 270px 20px, $padding: 20px 0 0 0);
+      @include MarginPadding($margin: 0 20px 200px 20px, $padding: 20px 0 0 0);
+      width: calc(100% - 40px);
     }
     &__since {
       @include phoneText;
+      @include MarginPadding($margin: 0 auto 20px 20px);
     }
     &__inputs {
       @include MarginPadding;
