--- a/styles/modules/blocks/searching-orders/searching-orders.scss
+++ b/styles/modules/blocks/searching-orders/searching-orders.scss
@@ -49,7 +49,7 @@
   }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1439px) {
   .searching-orders {
     @include tableSectionFlex;
     &__block-name {
@@ -72,6 +72,7 @@
 
 @media (max-width: 700px) {
   .searching-orders {
+    @include MarginPadding;
     padding-top: 40px;
     max-width: 100%;
     &__block-name {
@@ -87,6 +88,7 @@
     }
     &__button {
       @include phoneButton;
+      margin-bottom: 20px
     }
     &__foto {
       @include phoneFoto;
