--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,11 +1,14 @@
+@import "../vendor/normalize.css";
 @import "../fonts/font.css";
 @import "../styles/modules/blocks/effects/effects_visible.css";
-@import "../styles/modules/blocks/effects/effects_notVisible.css";
+@import "../styles/modules/blocks/effects/effects_not-visible.css";
+@import "../styles/modules/blocks/effects/animation-logo.scss";
+@import "./modules/blocks/effects/animation-logo.css";
 @import "../styles/modules/variables/variables.scss";
 @import "./modules/mixins/mixins.scss";
 @import "../styles/modules/blocks/page/page.scss";
 @import "../styles/modules/blocks/header/header.scss";
-@import "../styles/modules/blocks/fotoCourse/fotoCourse.scss";
+@import "../styles/modules/blocks/foto-course/foto-course.scss";
 @import "../styles/modules/blocks/study-composition/study-composition.scss";
 @import "../styles/modules/blocks/camera/camera.scss";
 @import "../styles/modules/blocks/searching-orders/searching-orders.scss";
